# homeassistant-trakt

./: .gitignore  AGENTS.md  README.md  hacs.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: lint.yml  merge.yml  validate.yml
custom_components/trakt/: __init__.py  api.py  application_credentials.py  config_flow.py  const.py  manifest.json  media_player.py
custom_components/trakt/translations/: en.json
