[project]
name = "homeassistant-trakt"
version = "0.1.0"
readme = "README.md"
authors = [ { name = "Joshua Peek" } ]
requires-python = ">=3.12.0"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[dependency-groups]
dev = [
    "homeassistant>=2024.4",
    "mypy>=1,<2",
    "ruff>=0.3",
]

[tool.ruff]
lint.extend-select = [ "I", "UP" ]

[tool.pyproject-fmt]
indent = 4

[tool.mypy]
strict = true
